fixed spacing in directory section

--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -25,10 +25,27 @@ section h3, section h6 {
 }
 section {
     min-height:4em;
-    margin: none !important;
+    clear:both;
+   
 }
 #directory{
     background: $directory-color;
+    height:auto;
+    
+}
+.contact-info {
+    float:left;
+    margin-left: 1em;
+}
+#code-list {
+    display:inline;
+}
+#code-list li{
+    display:inline-block;
+}
+#code-list li a {
+    font-size:2em;
+    text-align: center;
     
 }
 #resume{
